--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/7c6ecdb88c.js" crossorigin="anonymous"></script>
     <style>
-        /******** TO DO: try to set !important to hover effect for text color *******/
-        a:hover {
+        .hover-text-color:hover {
             color:#1AF870 !important;
             font-size: 1.1rem;
         }
 
-        .hover:hover{
+        .hover-background:hover{
             background-color:#1AF870;
         }
         
@@ -45,24 +44,31 @@
             to { border-color:#1AF870; }
         }
 
+        /* body {
+            min-height:100vh;
+        } */
+
+        /* style="padding-top: 8px;" */
     </style>
 </head>
 
-<body style="padding-top: 8px;">
+<body class="pt-2">
     <header style="background-color: #07105F;">
         <!-- NAV -->
         <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #07105F;">
             <div class="container-fluid justify-content-end">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon text-light"></span>
+                <span class="navbar-toggler-icon text-light">
+                    <i class="fas fa-bars" style="color:#fff; font-size:28px;"></i>
+                </span>
                 </button>
 
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link mx-4 text-light text-uppercase" href="#projects">Projects</a>
-                        <a class="nav-link mx-4 text-light text-uppercase" href="#skills">Skills</a>
-                        <a class="nav-link mx-4 text-light text-uppercase" href="#about">About</a>
-                        <a class="nav-link mx-4 text-light text-uppercase" href="#contact">Contact</a>
+                        <a class="nav-link mx-4 text-light text-uppercase hover-text-color" href="#projects">Projects</a>
+                        <a class="nav-link mx-4 text-light text-uppercase hover-text-color" href="#skills">Skills</a>
+                        <a class="nav-link mx-4 text-light text-uppercase hover-text-color" href="#about">About</a>
+                        <a class="nav-link mx-4 text-light text-uppercase hover-text-color" href="#contact">Contact</a>
                     </div>
                 </div>
             </div>
@@ -77,7 +83,7 @@
                     <h1 class="display-2 text-light">Hi, I'm Carol</h1>
                     <!-- wrapper "stops" the cursor at the last letter of the .typed-out element -->
                     <div class="wrapper">
-                        <p class="display-6 font-monospace typed-out" style="color: #1AF870;">Frontend developer</p>
+                        <p class="display-6 font-monospace typed-out" style="color: #1AF870;">Front End Developer</p>
                     </div>
                     
                 </div>
@@ -95,7 +101,7 @@
                             </a>
                             <h5 class="card-title my-4">Rogue Pickings</h5>
                             <div class="card-body">
-                                <p class="card-text">A simple, single-page, responsive homepage for a local restaurant. Initially built as a static site, I converted it to a responsive layout with Flexbox</p>
+                                <p class="card-text">A simple, single-page, responsive homepage for a local restaurant. Initially built as a static site, I converted it to a responsive layout with Flexbox.</p>
                                 <p class="class card-text"><strong>Skills: </strong>HTML, CSS, Flexbox</p>
                                 <p class="class card-text"><strong>Tools: </strong>GitHub Pages, Photoshop, Chrome DevTools</p>
                                 <a href="https://carolb92.github.io/206-rogue-pickings-responsive/" target="_blank" class="btn btn-outline-info text-uppercase">Live Site</a>
@@ -230,7 +236,7 @@
                 <h2 class="display-6 my-5" style="color:#07105F;">About Me</h2>
                 <div class="row align-items-center justify-content-around gx-5 mx-auto">
                     <div class="col-md-4 border border-light pt-3 pb-5 shadow rounded mb-4">
-                        <img class="img-fluid mx-auto" src="./img/IMG_9247.jpeg" alt="profile photo" height="250px">
+                        <img class="img-fluid mx-auto pb-5 rounded" src="./img/IMG_9247.jpeg" alt="profile photo" height="250px">
                     </div>
 
                     <div class="col-md-7">
@@ -242,10 +248,10 @@
                             </div>
                             <div class="card-body text-justify">
                                 <p>
-                                    Hi! 👋  My name is Carol. After working in healthcare for several years, I have spent the last 1+ years working toward a career change as a frontend developer.
+                                    Hi! 👋  My name is Carol. After working in healthcare for several years, I have spent the last 1+ years working toward a career change as a front end developer.
                                     After caring for patients in the emergency department throughout the Covid-19 pandemic, I found that my priorities and career goals had undergone a major shift. 
                                     I began looking for a career that would allow me to use my problem-solving skills, strong background in teamwork, and creativity while also leaving me with more time and energy to spend with my loved ones. 
-                                    As I researched opportunities in the tech industry, I quickly realized that a career as a frontend developer was a perfect fit. I decided to enroll in a boot camp and relished in the challenge of learning a completely new skill set. 
+                                    As I researched opportunities in the tech industry, I quickly realized that a career as a front end developer was a perfect fit. I decided to enroll in a boot camp and relished in the challenge of learning a completely new skill set. 
                                     I have grown to find that building websites and web applications is both fulfilling and fun.
                                     When I’m not coding, you can find me in the kitchen experimenting with new vegan recipes, reading a horror novel for my spooky book club, or hanging out with my dogs.
                                 </p>
@@ -264,13 +270,13 @@
                     <div class="col col-12 col-md-4 pb-3">
                         <h4 class="mb-3 text-info">Hire Me</h4>
                         <address>
-                            <a href="mailto:carol.bruggeman92@gmail.com" class="text-decoration-none text-light">carol.bruggeman92@gmail.com</a>
+                            <a href="mailto:carol.bruggeman92@gmail.com" class="text-decoration-none text-light hover-text-color">carol.bruggeman92@gmail.com</a>
                         </address>
                     </div>
                     <div class="col col-12 col-md-4 pb-4">
                         <h4 class="mb-3 text-info">Follow Me</h4>
-                            <a href="https://github.com/carolb92"><i class="fa-brands fa-github fs-1 mx-4 text-light py-1 px-1 hover"></i></a>
-                            <a href="https://www.linkedin.com/in/carol-bruggeman-576897258/"><i class="fa-brands fa-linkedin fs-1 mx-4 text-light py-1 px-1 hover"></i></a>
+                            <a href="https://github.com/carolb92"><i class="fa-brands fa-github fs-1 mx-4 text-light py-1 px-1 hover-background"></i></a>
+                            <a href="https://www.linkedin.com/in/carol-bruggeman-576897258/"><i class="fa-brands fa-linkedin fs-1 mx-4 text-light py-1 px-1 hover-background"></i></a>
                     </div>
                     <div class="col col-12 col-md-4 pb-4">
                         <h4 class="mb-3 text-info">Meet Me</h4>
