--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             /* creates the typewriter cursor */
             border-right: 0.15rem solid #1AF870;
             white-space: nowrap;
-            /* sets typing duration to 1s, direction is set to forward so the text element won't go back to width: 0 when the animation is finished*/
+            /* sets typing duration to 1.5s, direction is set to forward so the text element won't go back to width: 0 when the animation is finished*/
             /* the steps function specifies the number of intervals in the function and specifies the point at which the change of values occur within the interval*/
-            /* splits the typing animation into 20 steps */
+            /* splits the typing animation into 25 steps */
             animation: 
                 typing 1.5s steps(25, end) forwards,
                 /* makes the cursor disappear and reappear every 0.8s, forever */
@@ -75,8 +75,9 @@
         </nav>
     </header>
 
-    <!-- JUMBOTRON -->
+    
         <main class="container-fluid px-0">
+            <!-- JUMBOTRON -->
             <div class="jumbotron jumbotron-fluid my-5 pb-5 px-5" style="background-color: #07105F;">
                 <div class="container d-flex justify-content-center flex-column align-items-center">
                     <img src="./img/coding.png" alt="coding-icon" class="img-fluid" style="width:10%;">
@@ -248,7 +249,7 @@
                             </div>
                             <div class="card-body text-justify">
                                 <p>
-                                    Hi! 👋  My name is Carol. After working in healthcare for several years, I have spent the last 1+ years working toward a career change as a front end developer.
+                                    Hi! 👋  My name is Carol Bruggeman. After working in healthcare for several years, I have spent the last 1+ years working toward a career change as a front end developer.
                                     After caring for patients in the emergency department throughout the Covid-19 pandemic, I found that my priorities and career goals had undergone a major shift. 
                                     I began looking for a career that would allow me to use my problem-solving skills, strong background in teamwork, and creativity while also leaving me with more time and energy to spend with my loved ones. 
                                     As I researched opportunities in the tech industry, I quickly realized that a career as a front end developer was a perfect fit. I decided to enroll in a boot camp and relished in the challenge of learning a completely new skill set. 
@@ -262,7 +263,7 @@
             </div>
         </main>
 
-        <!-- FOOTER -->
+        <!-- FOOTER/CONTACT -->
         <footer id="contact">
             <div class="container-fluid text-center text-light" style="background-color: #07105F;">
                 <h2 class="display-6 my-5 pt-5">Get in Touch!</h2>
@@ -287,7 +288,7 @@
                         <p>In town? Let's grab coffee.</p>
                     </div>
                 </div>
-                <p class="pt-5 pb-3" style="font-size: 0.75rem;">Carol Bruggeman || 2022</p>
+                <p class="pt-5 pb-3 mb-0" style="font-size: 0.75rem;">Carol Bruggeman || 2022</p>
             </div>
         </footer>
         
