--- a/index.html
+++ b/index.html
@@ -43,12 +43,6 @@
             from { border-color: transparent; }
             to { border-color:#1AF870; }
         }
-
-        /* body {
-            min-height:100vh;
-        } */
-
-        /* style="padding-top: 8px;" */
     </style>
 </head>
 
@@ -81,7 +75,7 @@
             <div class="jumbotron jumbotron-fluid my-5 pb-5 px-5" style="background-color: #07105F;">
                 <div class="container d-flex justify-content-center flex-column align-items-center">
                     <img src="./img/coding.png" alt="coding-icon" class="img-fluid" style="width:10%;">
-                    <h1 class="display-2 text-light">Hi, I'm Carol</h1>
+                    <h1 class="display-4 text-light text-center">Hi, I'm Carol Bruggeman</h1>
                     <!-- wrapper "stops" the cursor at the last letter of the .typed-out element -->
                     <div class="wrapper">
                         <p class="display-6 font-monospace typed-out" style="color: #1AF870;">Front End Developer</p>
@@ -254,6 +248,7 @@
                                     I began looking for a career that would allow me to use my problem-solving skills, strong background in teamwork, and creativity while also leaving me with more time and energy to spend with my loved ones. 
                                     As I researched opportunities in the tech industry, I quickly realized that a career as a front end developer was a perfect fit. I decided to enroll in a boot camp and relished in the challenge of learning a completely new skill set. 
                                     I have grown to find that building websites and web applications is both fulfilling and fun.
+                                    I would love to code your next website or collaborate on a project!
                                     When I’m not coding, you can find me in the kitchen experimenting with new vegan recipes, reading a horror novel for my spooky book club, or hanging out with my dogs.
                                 </p>
                             </div>
@@ -276,8 +271,8 @@
                     </div>
                     <div class="col col-12 col-md-4 pb-4">
                         <h4 class="mb-3 text-info">Follow Me</h4>
-                            <a href="https://github.com/carolb92"><i class="fa-brands fa-github fs-1 mx-4 text-light py-1 px-1 hover-background"></i></a>
-                            <a href="https://www.linkedin.com/in/carol-bruggeman-576897258/"><i class="fa-brands fa-linkedin fs-1 mx-4 text-light py-1 px-1 hover-background"></i></a>
+                            <a href="https://github.com/carolb92"><i class="fa-brands fa-github fs-1 mx-4 text-light py-1 px-1 hover-text-color"></i></a>
+                            <a href="https://www.linkedin.com/in/carol-bruggeman-576897258/"><i class="fa-brands fa-linkedin fs-1 mx-4 text-light py-1 px-1 hover-text-color"></i></a>
                     </div>
                     <div class="col col-12 col-md-4 pb-4">
                         <h4 class="mb-3 text-info">Meet Me</h4>
