Edited projects and skills section, swapped images for tinified images

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="jumbotron jumbotron-fluid my-5 pb-5 px-5" style="background-color: #07105F;">
                 <div class="container d-flex justify-content-center flex-column align-items-center">
                     <img src="./img/coding.png" alt="coding-icon" class="img-fluid" style="width:10%;">
-                    <h1 class="display-4 text-light text-center">Hi, I'm Carol Bruggeman</h1>
+                    <h1 class="display-4 text-light text-center">Carol Bruggeman</h1>
                     <!-- wrapper "stops" the cursor at the last letter of the .typed-out element -->
                     <div class="wrapper">
                         <p class="display-6 font-monospace typed-out" style="color: #1AF870;">Front End Developer</p>
@@ -92,7 +92,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-4 my-4">
                         <div class="card w-30 text-center h-100 shadow">
                             <a href="https://carolb92.github.io/206-rogue-pickings-responsive/" target="_blank">
-                                <img src="./img/rogue-pickings-thumbnail.png" class="card-img-top" alt="website-screenshot">
+                                <img src="./img/rogue-pickings-tiny.png" class="card-img-top" alt="website-screenshot">
                             </a>
                             <h5 class="card-title my-4">Rogue Pickings</h5>
                             <div class="card-body">
@@ -107,7 +107,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-4 my-4">
                         <div class="card w-30 text-center h-100 shadow">
                             <a href="https://carolb92.github.io/guess-the-word/" target="_blank">
-                                <img src="./img/guess-the-word-thumbnail.png" class="card-img-top" alt="website-screenshot">
+                                <img src="./img/guess-the-word-tiny.png" class="card-img-top" alt="website-screenshot">
                             </a>
                             <h5 class="class card-title my-4">Guess the Word Game</h5>
                             <div class="card-body">
@@ -122,7 +122,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-4 my-4">
                         <div class="card w-30 text-center h-100 shadow">
                             <a href="https://carolb92.github.io/unplugged-repo/index.html" target="_blank">
-                                <img src="./img/unplugged-retreat-thumbnail.png" class="card-img-top" alt="website-screenshot">
+                                <img src="./img/unplugged-retreat-tiny.png" class="card-img-top" alt="website-screenshot">
                             </a>
                             <h5 class="class card-title my-4">Unplugged Retreat</h5>
                             <div class="card-body">
@@ -137,7 +137,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-4 my-4">
                         <div class="card w-30 text-center h-100 shadow">
                             <a href="https://hoq3n8.csb.app/" target="_blank">
-                                <img src="./img/super-sticky-notes-thumbnail.png" class="card-img-top" alt="website-screenshot">
+                                <img src="./img/super-sticky-notes-tiny.png" class="card-img-top" alt="website-screenshot">
                             </a>
                             <h5 class="class card-title my-4">Super Sticky Notes</h5>
                             <div class="card-body">
@@ -151,15 +151,15 @@
 
                     <div class="col-sm-12 col-md-6 col-lg-4 my-4">
                         <div class="card w-30 text-center h-100 shadow">
-                            <a href="https://carolb92.github.io/flashcards/" target="_blank">
-                                <img src="./img/flashcards-thumbnail.png" class="card-img-top" alt="website-screenshot">
+                            <a href="https://supervillains-final.carolbruggeman.repl.co/" target="_blank">
+                                <img src="./img/supervillains-thumbnail.png" class="card-img-top" alt="website-screenshot">
                             </a>
-                            <h5 class="class card-title my-4">Flashcards</h5>
+                            <h5 class="class card-title my-4">Female Supervillain Trading Cards</h5>
                             <div class="card-body">
-                                <p class="card-text">Paperless flashcards for your next cram session. This application was built with React and provides users with a card editor mode and a card viewer mode for custom flashcards.</p>
-                                <p class="class card-text"><strong>Skills: </strong>React</p>
-                                <p class="class card-text"><strong>Tools: </strong>GitHub Pages</p>
-                                <a href="https://carolb92.github.io/flashcards/" target="_blank" class="btn btn-outline-info text-uppercase">Live Site</a>
+                                <p class="card-text">This is a trading card application built with Python and utilizing a SQL database that allows users to add and remove their favorite female supervillains.</p>
+                                <p class="class card-text"><strong>Skills: </strong>Python, SQL, Flask, Jinja</p>
+                                <p class="class card-text"><strong>Tools: </strong>Replit</p>
+                                <a href="https://supervillains-final.carolbruggeman.repl.co/" target="_blank" class="btn btn-outline-info text-uppercase">Live Site</a>
                             </div>
                         </div>
                     </div>
@@ -169,42 +169,52 @@
             <!-- SKILLS -->
             <div id="skills" class="container-fluid text-center mt-5 px-5 py-4 text-light" style="background-color:#07105F;">
                 <h2 class="display-6 mt-5">Skills</h2>
-                <h3 class="fs-5 my-5">Developer Skills</h3>
-                <div class="row justify-content-center">
-                    <div class="col">
+                <h3 class="fs-4 my-5">Developer Skills</h3>
+                <div class="row justify-content-around">
+                    <div class="col col-3 col-lg-1">
                         <i class="fa-brands fa-html5 text-info display-5"></i>
                         <p class="text-light">HTML5</p>
                     </div>
 
-                    <div class="col">
+                    <div class="col col-3 col-lg-1">
                         <i class="fa-brands fa-css3-alt text-info display-5"></i>
                         <p class="text-light">CSS3</p>
                     </div>
 
-                    <div class="col">
-                        <i class="fa-brands fa-bootstrap text-info display-5"></i>
-                        <p class="text-light">Bootstrap</p>
-                    </div>
-
-                    <div class="col">
+                    <div class="col col-3 col-lg-1 gx-1">
                         <i class="fa-brands fa-square-js text-info display-5"></i>
                         <p class="text-light">Javascript</p>
                     </div>
 
-                    <div class="col">
+                    <div class="col col-3 col-lg-1">
                         <i class="fa-brands fa-react text-info display-5"></i>
                         <p class="text-light">React</p>
                     </div>
 
-                    <div class="col">
+                    <div class="col col-3 col-lg-1 gx-1">
+                        <i class="fa-brands fa-bootstrap text-info display-5"></i>
+                        <p class="text-light">Bootstrap</p>
+                    </div>
+
+                    <div class="col col-3 col-lg-1">
                         <i class="fa-brands fa-square-github text-info display-5"></i>
                         <p class="text-light">GitHub</p>
                     </div>
+
+                    <div class="col col-3 col-lg-1">
+                        <i class="fa-brands fa-python text-info display-5"></i>
+                        <p class="text-light">Python</p>
+                    </div>
+
+                    <div class="col col-3 col-lg-1">
+                        <i class="fa-solid fa-database text-info display-5"></i>
+                        <p class="text-light">SQL</p>
+                    </div>
                 </div>
 
-                <h3 class="fs-5 my-5">Tools</h3>
+                <h3 class="fs-4 my-5">Tools</h3>
 
-                <div class="row justify-content-center gy-3">
+                <div class="row justify-content-center gy-3 pb-5">
                     <div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-2">
                         <p>Git & the Command Line</p>
                     </div>
@@ -212,10 +222,10 @@
                         <p>FTP Client</p>
                     </div>
                     <div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-2">
-                        <p>VS Code</p>
+                        <p>Code Editors</p>
                     </div>
                     <div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-2">
-                        <p>Code Sandbox</p>
+                        <p>Jinja Templating</p>
                     </div>
                     <div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-2">
                         <p>Photoshop</p>
@@ -231,7 +241,7 @@
                 <h2 class="display-6 my-5" style="color:#07105F;">About Me</h2>
                 <div class="row align-items-center justify-content-around gx-5 mx-auto">
                     <div class="col-md-4 border border-light pt-3 pb-5 shadow rounded mb-4">
-                        <img class="img-fluid mx-auto pb-5 rounded" src="./img/IMG_9247.jpeg" alt="profile photo" height="250px">
+                        <img class="img-fluid mx-auto pb-5 rounded" src="./img/IMG_9247-tiny.jpeg" alt="profile photo" height="250px">
                     </div>
 
                     <div class="col-md-7">
@@ -241,14 +251,13 @@
                                 <i class="fa-solid fa-circle" style="color:#EECC3F;"></i>
                                 <i class="fa-solid fa-circle" style="color:#44BC33;"></i>
                             </div>
-                            <div class="card-body text-justify">
+                            <div class="card-body text-start">
                                 <p>
                                     Hi! 👋  My name is Carol Bruggeman. After working in healthcare for several years, I have spent the last 1+ years working toward a career change as a front end developer.
                                     After caring for patients in the emergency department throughout the Covid-19 pandemic, I found that my priorities and career goals had undergone a major shift. 
                                     I began looking for a career that would allow me to use my problem-solving skills, strong background in teamwork, and creativity while also leaving me with more time and energy to spend with my loved ones. 
                                     As I researched opportunities in the tech industry, I quickly realized that a career as a front end developer was a perfect fit. I decided to enroll in a boot camp and relished in the challenge of learning a completely new skill set. 
-                                    I have grown to find that building websites and web applications is both fulfilling and fun.
-                                    I would love to code your next website or collaborate on a project!
+                                    I have grown to find that building websites and web applications is both fulfilling and fun, and I would love to code your next website or collaborate on a project!
                                     When I’m not coding, you can find me in the kitchen experimenting with new vegan recipes, reading a horror novel for my spooky book club, or hanging out with my dogs.
                                 </p>
                             </div>
