Edited profile image height attribute per HTML validator

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <h2 class="display-6 my-5" style="color:#07105F;">About Me</h2>
                 <div class="row align-items-center justify-content-around gx-5 mx-auto">
                     <div class="col-md-4 border border-light pt-3 pb-5 shadow rounded mb-4">
-                        <img class="img-fluid mx-auto pb-5 rounded" src="./img/IMG_9247-tiny.jpeg" alt="profile photo" height="250px">
+                        <img class="img-fluid mx-auto pb-5 rounded" src="./img/IMG_9247-tiny.jpeg" alt="profile photo" height="250">
                     </div>
 
                     <div class="col-md-7">
