Added target attributes to github and linkedin links

--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
                     </div>
                     <div class="col col-12 col-md-4 pb-4">
                         <h4 class="mb-3 text-info">Follow Me</h4>
-                            <a href="https://github.com/carolb92"><i class="fa-brands fa-github fs-1 mx-4 text-light py-1 px-1 hover-text-color"></i></a>
-                            <a href="https://www.linkedin.com/in/carol-bruggeman-576897258/"><i class="fa-brands fa-linkedin fs-1 mx-4 text-light py-1 px-1 hover-text-color"></i></a>
+                            <a href="https://github.com/carolb92" target="_blank"><i class="fa-brands fa-github fs-1 mx-4 text-light py-1 px-1 hover-text-color"></i></a>
+                            <a href="https://www.linkedin.com/in/carol-bruggeman-576897258/" target="_blank"><i class="fa-brands fa-linkedin fs-1 mx-4 text-light py-1 px-1 hover-text-color"></i></a>
                     </div>
                     <div class="col col-12 col-md-4 pb-4">
                         <h4 class="mb-3 text-info">Meet Me</h4>
