--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@
                             </div>
                             <div class="card-body text-start">
                                 <p>
-                                    Hi! 👋  My name is Carol Bruggeman. After working in healthcare for several years, I have spent the last 1+ years working toward a career change as a front end developer.
+                                    Hi! 👋  My name is Carol Bruggeman. After working in healthcare as a physician assistant for several years, I have spent the last 1+ years working toward a career change as a front end developer.
                                     After caring for patients in the emergency department throughout the Covid-19 pandemic, I found that my priorities and career goals had undergone a major shift. 
                                     I began looking for a career that would allow me to use my problem-solving skills, strong background in teamwork, and creativity while also leaving me with more time and energy to spend with my loved ones. 
-                                    As I researched opportunities in the tech industry, I quickly realized that a career as a front end developer was a perfect fit. I decided to enroll in a boot camp and relished in the challenge of learning a completely new skill set. 
+                                    As I researched opportunities in the tech industry, I quickly realized that a career as a front end developer was a perfect fit. I decided to enroll in the Skillcrush Break Into Tech Program and relished in the challenge of learning a completely new skill set. 
                                     I have grown to find that building websites and web applications is both fulfilling and fun, and I would love to code your next website or collaborate on a project!
                                     When I’m not coding, you can find me in the kitchen experimenting with new vegan recipes, reading a horror novel for my spooky book club, or hanging out with my dogs.
                                 </p>
