Fixed typos, reordered Projects section, changed Skills color scheme and Project button colors re: accessibility issues

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             from { border-color: transparent; }
             to { border-color:#1AF870; }
         }
+
+        .card a{
+            font-weight:bold;
+        }
     </style>
 </head>
 
@@ -91,15 +95,15 @@
                 <div class="row justify-content-around d-flex flex-wrap">
                     <div class="col-sm-12 col-md-6 col-lg-4 my-4">
                         <div class="card w-30 text-center h-100 shadow">
-                            <a href="https://carolb92.github.io/206-rogue-pickings-responsive/" target="_blank">
-                                <img src="./img/rogue-pickings-tiny.png" class="card-img-top" alt="website-screenshot">
+                            <a href="https://hoq3n8.csb.app/" target="_blank">
+                                <img src="./img/super-sticky-notes-tiny.png" class="card-img-top" alt="website-screenshot">
                             </a>
-                            <h5 class="card-title my-4">Rogue Pickings</h5>
+                            <h5 class="class card-title my-4">Super Sticky Notes</h5>
                             <div class="card-body">
-                                <p class="card-text">A simple, single-page, responsive homepage for a local restaurant. Initially built as a static site, I converted it to a responsive layout with Flexbox.</p>
-                                <p class="class card-text"><strong>Skills: </strong>HTML, CSS, Flexbox</p>
-                                <p class="class card-text"><strong>Tools: </strong>GitHub Pages, Photoshop, Chrome DevTools</p>
-                                <a href="https://carolb92.github.io/206-rogue-pickings-responsive/" target="_blank" class="btn btn-outline-info text-uppercase">Live Site</a>
+                                <p class="card-text">A single page application built with React that allows users to add, edit, delete, and search sticky notes for to-dos or task management.</p>
+                                <p class="class card-text"><strong>Skills: </strong>React, Lifecycle Methods</p>
+                                <p class="class card-text"><strong>Tools: </strong>Code Sandbox</p>
+                                <a href="https://hoq3n8.csb.app/" target="_blank" class="btn btn-primary text-uppercase">Live Site</a>
                             </div>
                         </div>
                     </div>
@@ -111,10 +115,10 @@
                             </a>
                             <h5 class="class card-title my-4">Guess the Word Game</h5>
                             <div class="card-body">
-                                <p class="card-text">In this interactive game built with Javascript, players get eight tries to guess a word, letter by letter.</p>
-                                <p class="class card-text"><strong>Skills: </strong>Javascript, API</p>
+                                <p class="card-text">In this interactive game built with JavaScript, players get eight tries to guess a word, letter by letter.</p>
+                                <p class="class card-text"><strong>Skills: </strong>JavaScript, API</p>
                                 <p class="class card-text"><strong>Tools: </strong>GitHub Pages</p>
-                                <a href="https://carolb92.github.io/guess-the-word/" target="_blank" class="btn btn-outline-info text-uppercase">Live Site</a>
+                                <a href="https://carolb92.github.io/guess-the-word/" target="_blank" class="btn btn-primary text-uppercase">Live Site</a>
                             </div>
                         </div>
                     </div>
@@ -129,22 +133,7 @@
                                 <p class="card-text">A multi-page, responsive website for a company retreat built with Flexbox. A clean, efficient site which integrates a Google Maps feature and responsive elements.</p>
                                 <p class="class card-text"><strong>Skills: </strong>HTML, CSS, Flexbox</p>
                                 <p class="class card-text"><strong>Tools: </strong>Photoshop, GitHub Pages, Chrome DevTools</p>
-                                <a href="https://carolb92.github.io/unplugged-repo/index.html" target="_blank" class="btn btn-outline-info text-uppercase">Live Site</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 col-lg-4 my-4">
-                        <div class="card w-30 text-center h-100 shadow">
-                            <a href="https://hoq3n8.csb.app/" target="_blank">
-                                <img src="./img/super-sticky-notes-tiny.png" class="card-img-top" alt="website-screenshot">
-                            </a>
-                            <h5 class="class card-title my-4">Super Sticky Notes</h5>
-                            <div class="card-body">
-                                <p class="card-text">A single page application built with React that allows users to add, edit, delete, and search sticky notes for to-dos or task management.</p>
-                                <p class="class card-text"><strong>Skills: </strong>React, Lifecycle Methods</p>
-                                <p class="class card-text"><strong>Tools: </strong>Code Sandbox</p>
-                                <a href="https://hoq3n8.csb.app/" target="_blank" class="btn btn-outline-info text-uppercase">Live Site</a>
+                                <a href="https://carolb92.github.io/unplugged-repo/index.html" target="_blank" class="btn btn-primary text-uppercase">Live Site</a>
                             </div>
                         </div>
                     </div>
@@ -159,7 +148,22 @@
                                 <p class="card-text">This is a trading card application built with Python and utilizing a SQL database that allows users to add and remove their favorite female supervillains.</p>
                                 <p class="class card-text"><strong>Skills: </strong>Python, SQL, Flask, Jinja</p>
                                 <p class="class card-text"><strong>Tools: </strong>Replit</p>
-                                <a href="https://supervillains-final.carolbruggeman.repl.co/" target="_blank" class="btn btn-outline-info text-uppercase">Live Site</a>
+                                <a href="https://supervillains-final.carolbruggeman.repl.co/" target="_blank" class="btn btn-primary text-uppercase">Live Site</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-12 col-md-6 col-lg-4 my-4">
+                        <div class="card w-30 text-center h-100 shadow">
+                            <a href="https://carolb92.github.io/206-rogue-pickings-responsive/" target="_blank">
+                                <img src="./img/rogue-pickings-tiny.png" class="card-img-top" alt="website-screenshot">
+                            </a>
+                            <h5 class="card-title my-4">Rogue Pickings</h5>
+                            <div class="card-body">
+                                <p class="card-text">A simple, single-page, responsive homepage for a local restaurant. Initially built as a static site, I converted it to a responsive layout with Flexbox.</p>
+                                <p class="class card-text"><strong>Skills: </strong>HTML, CSS, Flexbox</p>
+                                <p class="class card-text"><strong>Tools: </strong>GitHub Pages, Photoshop, Chrome DevTools</p>
+                                <a href="https://carolb92.github.io/206-rogue-pickings-responsive/" target="_blank" class="btn btn-primary text-uppercase">Live Site</a>
                             </div>
                         </div>
                     </div>
@@ -183,7 +187,7 @@
 
                     <div class="col col-3 col-lg-1 gx-1">
                         <i class="fa-brands fa-square-js text-info display-5"></i>
-                        <p class="text-light">Javascript</p>
+                        <p class="text-light">JavaScript</p>
                     </div>
 
                     <div class="col col-3 col-lg-1">
@@ -214,7 +218,8 @@
 
                 <h3 class="fs-4 my-5">Tools</h3>
 
-                <div class="row justify-content-center gy-3 pb-5">
+                <div class="row justify-content-center gy-3 pb-5" style="color: #07105F;
+                font-weight: bold;">
                     <div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-2">
                         <p>Git & the Command Line</p>
                     </div>
