Removed python project, added WordPress project, updated skills/tools section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-4 my-4">
                         <div class="card w-30 text-center h-100 shadow">
                             <a href="https://carolb92.github.io/unplugged-repo/index.html" target="_blank">
-                                <img src="./img/unplugged-retreat-tiny.png" class="card-img-top" alt="website-screenshot">
+                                <img src="./img/unplugged-retreat-tiny.png" class="card-img-top" alt="unplugged websitescreenshot">
                             </a>
                             <h5 class="class card-title my-4">Unplugged Retreat</h5>
                             <div class="card-body">
@@ -139,15 +139,15 @@
 
                     <div class="col-sm-12 col-md-6 col-lg-4 my-4">
                         <div class="card w-30 text-center h-100 shadow">
-                            <a href="https://supervillains-final.carolbruggeman.repl.co/" target="_blank">
-                                <img src="./img/supervillains-thumbnail.png" class="card-img-top" alt="website-screenshot">
+                            <a href="https://demo.bigccodes.com/" target="_blank">
+                                <img src="./img/fictional-university.png" class="card-img-top" alt="fictional university website screenshot">
                             </a>
-                            <h5 class="class card-title my-4">Female Supervillain Trading Cards</h5>
+                            <h5 class="class card-title my-4">Fictional University</h5>
                             <div class="card-body">
-                                <p class="card-text">This is a trading card application built with Python and utilizing a SQL database that allows users to add and remove their favorite female supervillains.</p>
-                                <p class="class card-text"><strong>Skills: </strong>Python, SQL, Flask, Jinja</p>
-                                <p class="class card-text"><strong>Tools: </strong>Replit</p>
-                                <a href="https://supervillains-final.carolbruggeman.repl.co/" target="_blank" class="btn btn-primary text-uppercase">Live Site</a>
+                                <p class="card-text">This is a WordPress website for a fictional university. I created a custom theme from an HTML/CSS template and built an interactive site with custom pages and post types, implementing several plugins to make content management a breeze from the admin dashboard.</p>
+                                <p class="class card-text"><strong>Skills: </strong>WordPress, PHP, custom themes</p>
+                                <p class="class card-text"><strong>Tools: </strong>Advanced Custom Fields plugin, Members plugin</p>
+                                <a href="https://demo.bigccodes.com/" target="_blank" class="btn btn-primary text-uppercase">Live Site</a>
                             </div>
                         </div>
                     </div>
@@ -205,13 +205,13 @@
                     </div>
 
                     <div class="col col-3 col-lg-1">
-                        <i class="fa-brands fa-python text-info display-5"></i>
-                        <p class="text-light">Python</p>
+                        <i class="fa-brands fa-wordpress text-info display-5"></i>
+                        <p class="text-light">WordPress</p>
                     </div>
 
                     <div class="col col-3 col-lg-1">
-                        <i class="fa-solid fa-database text-info display-5"></i>
-                        <p class="text-light">SQL</p>
+                        <i class="fa-brands fa-php text-info display-5"></i>
+                        <p class="text-light">PHP</p>
                     </div>
                 </div>
 
@@ -229,7 +229,7 @@
                         <p>Code Editors</p>
                     </div>
                     <div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-3">
-                        <p>Jinja Templating</p>
+                        <p>Figma</p>
                     </div>
                     <div class="col col-12 col-md-5 col-lg-3 mx-3 bg-info pt-3">
                         <p>Photoshop</p>
