Modified about me section

--- a/index.html
+++ b/index.html
@@ -441,12 +441,13 @@
 									developed while caring for patients in the high-pressure
 									environment of an emergency room have made me an expert in
 									client-facing solutions and allow me to thrive as a member of
-									any team. I have found that my passion lies in creating
-									visually stunning user interfaces to help solve real-world
-									problems, albeit in a relatively more behind-the-scenes role.
-									When I’m not coding, you can find me in the kitchen
-									experimenting with new vegan recipes, reading a horror novel
-									for my spooky book club, or hanging out with my dogs.
+									any team. I have found that my passion lies in combining my
+									critical thinking skills with my creativity, to build visually
+									stunning user interfaces that help solve real-world problems,
+									albeit in a relatively more behind-the-scenes role. When I’m
+									not coding, you can find me in the kitchen experimenting with
+									new vegan recipes, reading a horror novel for my spooky book
+									club, or hanging out with my dogs.
 									<!-- Hi! 👋  My name is Carol Bruggeman. After working in healthcare as a physician assistant for several years, I have spent the last 1+ years working toward a career change as a front end developer.
                                     After caring for patients in the emergency department throughout the Covid-19 pandemic, I found that my priorities and career goals had undergone a major shift. 
                                     I began looking for a career that would allow me to use my problem-solving skills, strong background in teamwork, and creativity while also leaving me with more time and energy to spend with my loved ones. 
