Final about section tweaks

--- a/index.html
+++ b/index.html
@@ -432,13 +432,13 @@
 								<p>
 									Hi! 👋 My name is Carol Bruggeman. In a past life, I was an
 									emergency medicine physician assistant - a taxing and
-									challenging profession that ended up laying the perfect
-									foundation to segue into a career in front-end development.
-									You see, I am a problem-solving pro, able to break down
-									complex problems into smaller, more manageable components and
-									come up with a step-by-step solution, all while attending to
-									each problem's unique conditions. The interpersonal skills I
-									developed while caring for patients in the high-pressure
+									challenging profession that laid the perfect foundation to
+									segue into a career in front-end development. You see, I am a
+									problem-solving pro, able to break down complex problems into
+									smaller, more manageable components and come up with a
+									step-by-step solution, all while attending to each challenge's
+									unique conditions. The communication and interpersonal skills
+									I developed while caring for patients in the high-pressure
 									environment of an emergency room have made me an expert in
 									client-facing solutions and allow me to thrive as a member of
 									any team. I have found that my passion lies in combining my
